FIXED COLOUR ISSUES
When I provided this commit f01955 it messed up the footer.  I have
fixed this issue with this push.

--- a/homepage/resources/colour.css
+++ b/homepage/resources/colour.css
@@ -12,6 +12,10 @@
 
 .grey {
 	background: #2B2D30;
+}
+
+.light-grey {
+	background: grey;
 	color: white;
 }
 
